--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Links and Images</title>
 </head>
 <body>
-  <h1>This is My Home Page for Links and Images</h1>
+  <h1>Home</h1>
   <h2>Pages</h2>
   <p>
     <a href="links.html"> Links </a>
