--- a/misc/extras.html
+++ b/misc/extras.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Author: Mark Jonathan Pascual</h1>
+  <h1>Author: Nica G. Santos</h1>
 </body>
 </html>
